--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -12,8 +12,14 @@ services:
     volumes:
         - postgres_data:/var/lib/postgresql/data
 
+  frontend:
+    image: frontend_book
+    ports:
+      - "5173:5173"
 
-  app:
+
+
+  backend:
     image: backend_book
     ports:
       - "14000:8000"
